[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/organization2.gd" type="Script" id=1]
[ext_resource path="res://scenes/custom_nodes/TagEdit.gd" type="Script" id=2]

[node name="organization" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 91.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="panel/margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1901.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox1" type="HBoxContainer" parent="panel/margin/vbox"]
margin_right = 1896.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="search_bar" type="LineEdit" parent="panel/margin/vbox/hbox1"]
margin_right = 1822.0
margin_bottom = 48.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "  Enter Search Query ..."
script = ExtResource( 2 )

[node name="search_button" type="Button" parent="panel/margin/vbox/hbox1"]
margin_left = 1826.0
margin_right = 1896.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 32 )
text = "  Search  "

[node name="hsep" type="HSeparator" parent="panel/margin/vbox"]
margin_top = 52.0
margin_right = 1896.0
margin_bottom = 56.0
mouse_filter = 2

[node name="hbox2" type="HBoxContainer" parent="panel/margin/vbox"]
margin_top = 60.0
margin_right = 1896.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="results_label" type="Label" parent="panel/margin/vbox/hbox2"]
margin_right = 56.0
margin_bottom = 14.0
text = "  results:"

[node name="SPACE" type="Control" parent="panel/margin/vbox/hbox2"]
margin_left = 60.0
margin_right = 1784.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="vbox" type="VBoxContainer" parent="panel/margin/vbox/hbox2"]
margin_left = 1788.0
margin_right = 1896.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 1

[node name="advanced_search_show" type="LinkButton" parent="panel/margin/vbox/hbox2/vbox"]
margin_right = 108.0
margin_bottom = 14.0
text = "Advanced Search"

[connection signal="focus_entered" from="panel/margin/vbox/hbox1/search_bar" to="." method="_on_search_bar_focus_entered"]
[connection signal="focus_exited" from="panel/margin/vbox/hbox1/search_bar" to="." method="_on_search_bar_focus_exited"]
[connection signal="text_changed" from="panel/margin/vbox/hbox1/search_bar" to="." method="_on_search_bar_text_changed"]
[connection signal="text_entered" from="panel/margin/vbox/hbox1/search_bar" to="." method="_on_search_bar_text_entered"]
[connection signal="button_up" from="panel/margin/vbox/hbox1/search_button" to="." method="_on_search_button_button_up"]
[connection signal="button_up" from="panel/margin/vbox/hbox2/vbox/advanced_search_show" to="." method="_on_advanced_search_show_button_up"]
